# apteka-strzelin.pl

./: Dockerfile  README.md
backend/: Cargo.toml  config.yaml  db.json
backend/src/: database.rs  main.rs
frontend/: .env.development  .env.production  README.md  manifest.json  package-lock.json  package.json
frontend/apteka-strzelin/: package-lock.json  package.json  tailwind.config.js
frontend/apteka-strzelin/app/: layout.tsx  page.js  page.tsx
frontend/public/: index.html  sitemap.xml
frontend/src/: App.css  App.tsx  Break.tsx  ErrorPage.module.css  ErrorPage.tsx  NoPharmacyCard.module.css  NoPharmacyCard.tsx  PharmacyCard.module.css  PharmacyCard.tsx  PharmacyLoader.tsx  TempCard.tsx  index.css  index.tsx
frontend/src/img/: index.tsx
