[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.2.1", features = ["openssl"]}
actix-cors = "0.6.4"
chrono = "0.4.23"
chrono-tz = "0.8.1"
openssl = {version = "0.10.45", features=["v110"]}
serde_json = "1.0.91"
serde = {version="1.0.152", features=["derive"]}

