[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.4.1"}
actix-cors = "0.6.5"
actix-files = "0.6.2"
chrono = "0.4.31"
chrono-tz = "0.8.5"
serde_json = "1.0.111"
serde = {version="1.0.194", features=["derive"]}

